fix : getImage() method changes